test/libsolidity/syntaxTests/userDefinedValueType/repetition_err.sol
type MyInt is int;
type MyInt is int;
type MyAddress is address;
type MyAddress is uint;
// ----
// DeclarationError 2333: (19-37='type MyInt is int;'): Identifier already declared.
// DeclarationError 2333: (65-88='type MyAddress is uint;'): Identifier already declared.
